--- a/css/home-header.css
+++ b/css/home-header.css
@@ -118,12 +118,16 @@
   .center-nav {
     gap: 18px;
     font-size: 12px;
+    margin-right: 20px;
   }
 
   .right-nav {
-    font-size: 11px;
-    padding: 7px 14px;
-    right: 15px;
+    font-size: 8px;
+    padding-top: 7px;
+    padding-right: 14px;
+    padding-bottom: 7px;
+    padding-right: 14px;
+    margin-right: 15px;
   }
 }
 
