--- a/css/home-header.css
+++ b/css/home-header.css
@@ -109,10 +109,12 @@
 @media (min-width: 320px) and (max-width: 700px) {
   .header-logo {
     width: 50px;
+    opacity: 0;
   }
 
   .left-logo {
     left: 15px;
+    opacity: 0;
   }
 
   .center-nav {
@@ -123,7 +125,7 @@
   .right-nav {
     font-size: 8px;
     padding: 7px 14px;
-    right: 15px;
+    right: 10px;
   }
 }
 
