--- a/css/home-header.css
+++ b/css/home-header.css
@@ -128,6 +128,7 @@
   transition: all 0.3s ease;
   border-radius: 2px;
   display: block;
+  left: 50px;
 }
 
 .hamburger.active span:nth-child(1) {
