--- a/css/home-header.css
+++ b/css/home-header.css
@@ -166,6 +166,7 @@
     padding: 20px 0;
     transition: left 0.3s ease;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    z-index: 550;
   }
   
   .center-nav.active {
@@ -188,6 +189,10 @@
   .center-nav a:hover {
     background-color: rgba(243, 183, 70, 0.1);
     transform: translateY(0);
+  }
+
+  .center-nav:has(a:hover) a:not(:hover) {
+    opacity: 1;
   }
 
   .right-nav {
