--- a/css/home-header.css
+++ b/css/home-header.css
@@ -109,14 +109,18 @@
 .hamburger {
   display: none;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
   gap: 5px;
-  padding: 5px;
+  padding: 10px;
   background: none;
   border: none;
   z-index: 600;
   position: absolute;
   left: 15px;
+  width: 40px;
+  height: 40px;
 }
 
 .hamburger span {
