--- a/css/home-header.css
+++ b/css/home-header.css
@@ -116,7 +116,7 @@
   padding: 10px;
   background: none;
   border: none;
-  outlsine: none;
+  outline: none;
   z-index: 600;
   position: absolute;
   left: 15px;
