--- a/css/about-us.css
+++ b/css/about-us.css
@@ -66,13 +66,14 @@ p {
   z-index: 1;
 }
 .content{
-    display: flex;
+  display: flex;
   flex-direction: column;
   font-size: 2.4vw;
   margin-bottom:80px;
   opacity: 0;
   align-items: center;
   justify-content: center;
+  text-align: center;
   color: white;
   padding-top: 5%;
   transform: translateY(50px);
@@ -81,6 +82,12 @@ p {
 .content.visible{
   opacity: 1;
   transform: translateY(0);
+}
+.content-header{
+  width: 45%;
+  text-align: center; 
+  margin-bottom: 0px;
+  font-family: Orbitron;
 }
 .content-subheader{
   color: #ffba69;
@@ -229,10 +236,11 @@ p {
   font-size: 35px;
   margin-bottom:100px;
 } 
+.content-header{
+  width: 45%;
+}
 .content-subheader{
-  width: 40%;
-  margin-top: 0px;
-  margin-bottom: 80px;
+  width: 45%;
   font-size: 35px;
 }
 .content-paragraph{
@@ -250,10 +258,10 @@ p {
     margin-bottom: 180px;
   }
   .tip{
-    font-size: 2.5vw;
+    font-size: 2.7vw;
   }
   .second-text{
-    font-size: 1.7vw;
+    font-size: 1.8vw;
     text-align: left;
     height: 140px;
   }
