--- a/css/home-header.css
+++ b/css/home-header.css
@@ -164,7 +164,7 @@
 
 .footer p {
   opacity: 0.6;
-  font-size: 12px;;
+  font-size: 12px;
   letter-spacing: 1px;
   color: white;
   display: flex;
