--- a/css/about-us.css
+++ b/css/about-us.css
@@ -86,6 +86,7 @@ p {
   margin-bottom: 50px;
   font-size: 30px;
   text-align: center;
+  font-family: Orbitron;
 }
 .content-paragraph{
   width: 60%;
