--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -72,7 +72,7 @@ body {
   width: 45%;
   text-align: center;
   color: #ffba69;
-  font-family: inter 400;
+  font-family: Orbitron;
 }
 /* Line Image */
 
