--- a/css/game.css
+++ b/css/game.css
@@ -80,8 +80,7 @@ body{
 .content-paragraph{
   width: 35%;
   text-align: center;
-  color: #ffba69;
-  font-family: inter 400;
+  color: #ffaa46;
   font-size: 32px;
 }
 
@@ -94,7 +93,7 @@ body{
 }
 
 .about{
-  color:  rgb(236, 173, 0);
+  color: #ffaa46;
   text-transform: uppercase;
   font-size: 70px;
   margin: 0;
@@ -129,7 +128,7 @@ body{
 }
 
 .left-section .middle-text{
-  color: orange;
+  color: #ffaa46;
   font-size: 60px;
   text-align: center;
   width: 350px;
