--- a/css/about-us.css
+++ b/css/about-us.css
@@ -86,12 +86,13 @@ p {
   margin-bottom: 50px;
   font-size: 30px;
   text-align: center;
-  font-family: Orbitron;
+  font-weight: bold;
+  font-family: Inter;
 }
 .content-paragraph{
   width: 60%;
   text-align: center;
-  font-family: inter 400;
+    font-family: Inter;
   font-size: 24px;
   line-height: 130%;
 }
