--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -72,7 +72,8 @@ body {
   width: 45%;
   text-align: center;
   color: #ffba69;
-  font-family: Orbitron;
+    font-weight: bold;
+    font-family: Inter;
 }
 /* Line Image */
 
