--- a/css/game.css
+++ b/css/game.css
@@ -82,6 +82,8 @@ body{
   text-align: center;
   color: #ffaa46;
   font-size: 32px;
+  font-weight: bold;
+  font-family: Inter;
 }
 
 .main-content{
@@ -103,6 +105,7 @@ body{
 .main-paragraph{
   font-size: 45px;
   width: 70%;
+  font-family: Inter;
 }
 
 /*section 3*/
@@ -542,7 +545,7 @@ p {
   }
 
   .content-paragraph {
-    width: 40%;
+    width: 55%;
     font-size: 36px;
   }
 
