--- a/css/home-header.css
+++ b/css/home-header.css
@@ -244,7 +244,7 @@ p {
   }
 }
 
-/* Laptop */
+/* Laptop and Tablet*/
 @media (min-width: 701px) and (max-width: 1023px) {
   .header-logo {  
     width: 60px;
@@ -269,7 +269,7 @@ p {
     right: 18px;
   }
   .footer p {
-  font-size: 12px;
+  font-size: 10px;
   }
 }
 
@@ -298,7 +298,7 @@ p {
     right: 20px;
   }
   .footer p {
-  font-size: 14px;
+  font-size: 11px;
   }
 }
 
@@ -348,6 +348,6 @@ p {
     right: 60px;
   }
   .footer p {
-  font-size: 30px;
+  font-size: 23px;
   }
 }
