--- a/css/about-us.css
+++ b/css/about-us.css
@@ -272,7 +272,46 @@ p {
 }
 
 /* Desktop (2K) */
-@media (min-width: 1920px) and (max-width: 2560px) {
+@media (min-width: 1920px) and (max-width: 2559px) {
+.content{
+  flex-direction: column;
+  font-size: 50px;
+  margin-bottom:200px;
+}
+.content-header{
+  width: 45%;
+  margin: 0;
+} 
+.content-subheader{
+  width: 40%;
+  margin-top: 0px;
+  margin-bottom: 200px;
+  font-size: 55px;
+}
+.content-paragraph{
+  width: 70%;
+  font-size: 50px;
+}
+.box{
+    flex-direction: row;
+    gap: 160px;
+  }
+  .individual-box{
+    flex-direction: column;
+    height: auto;
+    width: 25%;
+    margin-bottom: 300px;
+  }
+  .tip{
+    font-size: 80px;
+  }
+  .second-text{
+    font-size: 40px;
+    text-align: left;
+    height: 350px;
+  }
+}
+@media (min-width: 2560px) {
 .content{
   flex-direction: column;
   font-size: 50px;
