--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -478,7 +478,82 @@ button{
 }
 
 /* Desktop */
-@media (min-width: 1920px) and (max-width: 2560px) {
+@media (min-width: 1920px) and (max-width: 2559px) {
+.content{
+  flex-direction: column;
+  font-size: 55px;
+  margin-bottom:200px;
+}
+.content-header{
+  width: 45%;
+} 
+.content-paragraph{
+  width: 45%;
+}
+.box {
+  flex-direction: row;
+  gap: 100px;
+}
+
+/* Individual box - FIXED */
+.box > div {
+  flex-direction: column;
+  height: auto;
+  width: 600px;
+  border: 10px solid #ffa947;
+}
+.feedback .tip{
+  height: 100px;
+}
+button{
+  height: 150px;
+  width: 450px;
+  font-size: 60px;
+  border: 10px solid;
+}
+/*Tip*/
+.tip {
+  font-size: 73px;
+}
+
+/* Second text */
+.second-text {
+  font-size: 40px;
+  height: 550px;
+}
+
+/* Media icons */
+.icons {
+  margin-bottom: 200px;
+  gap: 80px;
+}
+.media-icons {
+  width: 120px;
+  height: 120px;
+}
+/* Media Transition*/
+.media-transition h3{
+  margin-top: 200px;
+  margin-bottom: 200px;
+  font-size: 60px;
+}
+/* Email Transition */
+.email {
+  margin-bottom: 160px;
+}
+.email h4 {
+  height: 5px;
+  font-size: 60px;
+}
+
+.email p {
+  height: 25px;
+  font-size: 55px;
+  margin-bottom: 380px;
+}
+}
+/* Desktop 2k*/
+@media (min-width: 2560px) {
 .content{
   flex-direction: column;
   font-size: 55px;
