--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -478,7 +478,7 @@ button{
 }
 
 /* Desktop */
-@media (min-width: 1920px) and (max-width: 2559px) {
+@media (min-width: 1920px){
 .content{
   flex-direction: column;
   font-size: 55px;
