--- a/css/about-us.css
+++ b/css/about-us.css
@@ -304,10 +304,10 @@ p {
   }
   .tip{
     font-size: 80px;
+    padding-bottom: 250px;
   }
   .second-text{
-    font-size: 40px;
+    font-size: 44px;
     text-align: left;
-    height: 500px;
   }
 }
