--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -426,7 +426,7 @@ button{
 /* Individual box - FIXED */
 .box > div {
   flex-direction: column;
-  width: 280px;
+  width: 260px;
 }
 .feedback .tip{
   height: 48px;
@@ -438,13 +438,14 @@ button{
 }
 /*Tip*/
 .tip {
-  font-size: 37px;
+  font-size: 33px;
 }
 
 /* Second text */
 .second-text {
   font-size: 20px;
   height: 240px;
+  padding-bottom: 100px;
 }
 
 /* Media icons */
@@ -499,7 +500,7 @@ button{
 .box > div {
   flex-direction: column;
   height: auto;
-  width: 600px;
+  width: 580px;
   border: 10px solid #ffa947;
 }
 .feedback .tip{
@@ -513,88 +514,14 @@ button{
 }
 /*Tip*/
 .tip {
-  font-size: 73px;
+  font-size: 70px;
 }
 
 /* Second text */
 .second-text {
   font-size: 40px;
-  height: 550px;
-}
-
-/* Media icons */
-.icons {
-  margin-bottom: 200px;
-  gap: 80px;
-}
-.media-icons {
-  width: 120px;
-  height: 120px;
-}
-/* Media Transition*/
-.media-transition h3{
-  margin-top: 200px;
-  margin-bottom: 200px;
-  font-size: 60px;
-}
-/* Email Transition */
-.email {
-  margin-bottom: 160px;
-}
-.email h4 {
-  height: 5px;
-  font-size: 60px;
-}
-
-.email p {
-  height: 25px;
-  font-size: 55px;
-  margin-bottom: 380px;
-}
-}
-/* Desktop 2k*/
-@media (min-width: 2560px) {
-.content{
-  flex-direction: column;
-  font-size: 55px;
-  margin-bottom:200px;
-}
-.content-header{
-  width: 45%;
-} 
-.content-paragraph{
-  width: 45%;
-}
-.box {
-  flex-direction: row;
-  gap: 100px;
-}
-
-/* Individual box - FIXED */
-.box > div {
-  flex-direction: column;
-  height: auto;
-  width: 600px;
-  border: 10px solid #ffa947;
-}
-.feedback .tip{
-  height: 100px;
-}
-button{
-  height: 150px;
-  width: 450px;
-  font-size: 60px;
-  border: 10px solid;
-}
-/*Tip*/
-.tip {
-  font-size: 73px;
-}
-
-/* Second text */
-.second-text {
-  font-size: 40px;
-  height: 550px;
+  height: 500px;
+  padding-bottom: 120px;
 }
 
 /* Media icons */
