--- a/css/home-general.css
+++ b/css/home-general.css
@@ -1,19 +1,32 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   background-color: black;
-  height: 2500px;
+  font-family: Orbitron;
+  min-height: 100vh;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+main {
+  padding-top: 0;
 }
 
 p {
   color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  font-family: Orbitron;
 }
 
-.active{
-  text-decoration: underline;
-  color: orange;
+a {
+  text-decoration: none;
+  color: inherit;
 }
