--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -507,8 +507,86 @@ button:active{
   }
 }
 
-<<<<<<< HEAD
 /* Desktop (2K) */
+@media (min-width: 1920px) and (max-width: 2559px) {
+  .content{
+    flex-direction: column;
+    font-size: 50px;
+    margin-bottom: 130px;
+  }
+  
+  .content-header{
+    width: 50%;
+  } 
+  
+  .content-paragraph{
+    width: 50%;
+    font-size: 35px;
+  }
+  
+  .box {
+    flex-direction: row;
+    gap: 60px;
+    margin: 60px 50px;
+  }
+
+  .box > div {
+    width: calc(33.333% - 45px);
+    min-height: 600px;
+    padding: 35px 25px 25px 25px;
+    border: 8px solid #ffa947;
+  }
+  
+  button{
+    height: 100px;
+    width: 350px;
+    font-size: 38px;
+    border: 8px solid #ffffff;
+  }
+  
+  button:hover{
+    border: 8px solid #ffa947;
+  }
+  
+  .tip {
+    font-size: 50px;
+    min-height: 120px;
+  }
+
+  .second-text {
+    font-size: 30px;
+  }
+
+  .icons {
+    margin-bottom: 150px;
+    gap: 80px;
+  }
+  
+  .media-icons {
+    width: 100px;
+    height: 100px;
+  }
+  
+  .media-transition h3{
+    margin-top: 120px;
+    margin-bottom: 100px;
+    font-size: 50px;
+  }
+  
+  .email {
+    margin-bottom: 220px;
+  }
+  
+  .email h4 {
+    font-size: 50px;
+  }
+
+  .email p {
+    font-size: 45px;
+  }
+}
+
+/* Desktop (4K) */
 @media (min-width: 2560px) and (max-width: 3000px) {
   .content{
     display: flex;
@@ -576,6 +654,10 @@ button:active{
     cursor: pointer;
   }
   
+  button:hover{
+    border: 10px solid #ffa947;
+  }
+  
   .tip {
     color: #ffa947;
     font-size: 60px;
@@ -583,32 +665,6 @@ button:active{
     text-align: center;
     min-height: 140px;
   }
-=======
-/* Individual box - FIXED */
-.box > div {
-  flex-direction: column;
-  width: 260px;
-}
-.feedback .tip{
-  height: 48px;
-}
-button{
-  height: 80px;
-  width: 250px;
-  font-size: 30px;
-}
-/*Tip*/
-.tip {
-  font-size: 33px;
-}
-
-/* Second text */
-.second-text {
-  font-size: 20px;
-  height: 240px;
-  padding-bottom: 100px;
-}
->>>>>>> 069a36522ac6528d6f3b4570e7ad810cf6eb3a90
 
   .second-text {
     font-size: 32px;
@@ -666,7 +722,6 @@ button{
     margin: 0 0 20px 0;
   }
 
-<<<<<<< HEAD
   .email p {
     font-size: 45px;
     color: white;
@@ -674,81 +729,3 @@ button{
     margin: 0;
   }
 }
-=======
-/* Desktop */
-@media (min-width: 1920px){
-.content{
-  flex-direction: column;
-  font-size: 55px;
-  margin-bottom:200px;
-}
-.content-header{
-  width: 45%;
-} 
-.content-paragraph{
-  width: 45%;
-}
-.box {
-  flex-direction: row;
-  gap: 100px;
-}
-
-/* Individual box - FIXED */
-.box > div {
-  flex-direction: column;
-  height: auto;
-  width: 580px;
-  border: 10px solid #ffa947;
-}
-.feedback .tip{
-  height: 100px;
-}
-button{
-  height: 150px;
-  width: 450px;
-  font-size: 60px;
-  border: 10px solid;
-}
-/*Tip*/
-.tip {
-  font-size: 70px;
-}
-
-/* Second text */
-.second-text {
-  font-size: 40px;
-  height: 500px;
-  padding-bottom: 120px;
-}
-
-/* Media icons */
-.icons {
-  margin-bottom: 200px;
-  gap: 80px;
-}
-.media-icons {
-  width: 120px;
-  height: 120px;
-}
-/* Media Transition*/
-.media-transition h3{
-  margin-top: 200px;
-  margin-bottom: 200px;
-  font-size: 60px;
-}
-/* Email Transition */
-.email {
-  margin-bottom: 160px;
-}
-.email h4 {
-  height: 5px;
-  font-size: 60px;
-}
-
-.email p {
-  height: 25px;
-  font-size: 55px;
-  margin-bottom: 380px;
-}
-}
->>>>>>> 069a36522ac6528d6f3b4570e7ad810cf6eb3a90
