--- a/css/home-general.css
+++ b/css/home-general.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   overflow-x: hidden;
   background-color: black;
-  font-family: Orbitron;
+  font-family: Orbitron, sans-serif;
   min-height: 100vh;
 }
 
@@ -23,7 +23,7 @@ main {
 
 p {
   color: white;
-  font-family: Orbitron;
+  font-family: Orbitron, sans-serif;
 }
 
 a {
